--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -14,6 +14,10 @@ jobs:
     name: Terraform Deploy
     runs-on: self-hosted
 
+    defaults:
+      run:
+        working-directory: ./
+
     env:
       AWS_REGION: ${{ secrets.AWS_REGION }}
 
